--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="container">
             <div class="banner-wrapper">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 col-md-12">
+                    <div class="col-lg-6 col-md-12 our-slider move-first">
                         <div class="banner-content pt-5">
                             <h1 class="best-Template ">PCN Protocol Brings the Ultimate  <br class="d-none d-xl-block">User
                                 Experience with <br class="d-none d-xl-block"> Unbreachable Security</h1>
@@ -245,14 +245,14 @@
                                 Blockchain system to enable foolproof security <br class="d-none d-xl-block"> to users’ untrackable
                                 internet usage with DVPN <br class="d-none d-xl-block"> using the latest Web 3.0. </h3>
                             <div class="mt-5">
-                                <a href="#token-sale-mobile-app" class="btn btn-lg btn-gradient-purple btn-glow mr-4 mb-2 " >Purchase Token</a>
-                                <a href="#whitepaper" class="btn btn-lg btn-gradient-purple btn-glow mb-2 " >Whitepaper</a>
+                                <a href="#token-sale-mobile-app" class="btn our-slider-but1 btn-lg btn-gradient-purple btn-glow mr-4 mb-2 " >Purchase Token</a>
+                                <a href="#whitepaper" class="btn btn-lg our-slider-but2 btn-gradient-purple btn-glow mb-2 " >Whitepaper</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 move-first">
+                    <div class="col-lg-6 header-first-main-text col-md-12 ">
                         <div style="width: 570px; margin-top: 70px;" class="wpsisac-slick-carousal-wrp wpsisac-clearfix " data-conf="{&quot;slidestoshow&quot;:&quot;3&quot;,&quot;slidestoscroll&quot;:1,&quot;dots&quot;:&quot;true&quot;,&quot;arrows&quot;:&quot;true&quot;,&quot;autoplay&quot;:&quot;true&quot;,&quot;autoplay_interval&quot;:3000,&quot;speed&quot;:300,&quot;rtl&quot;:&quot;false&quot;,&quot;centermode&quot;:&quot;true&quot;,&quot;lazyload&quot;:&quot;&quot;,&quot;variablewidth&quot;:&quot;false&quot;,&quot;loop&quot;:&quot;true&quot;,&quot;hover_pause&quot;:&quot;true&quot;}">
-                            <div style="width: 600px;" id="wpsisac-slick-carousal-7"  class="wpsisac-slick-init wpsisac-slick-carousal design-6 wpsisac-image-fit wpsisac-center">
+                            <div style="width: 600px; ;" id="wpsisac-slick-carousal-7"  class="wpsisac-slick-init wpsisac-slick-carousal design-6 wpsisac-image-fit wpsisac-center">
                                 <div class="wpsisac-image-slide">  
                     <a href="">	<div class="wpsisac-image-slide-wrap" style='height:400px;'>
                             <img  src="./images slider/picture1.png" alt="1-The urban farmers battling Bangalore’s jungle" />
