--- a/keygard.html
+++ b/keygard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
     <meta name="keywords" content="crypto, ico, cryptocurrency, bitcoin, landing, admin, dashboard, PCN, modern, clean, responsive">
-    <meta name="author" content="PIXINVENT">
+    <!-- <meta name="author" content="PIXINVENT">
     <title>PCNP - Keycard Integration</title>
     <meta name="description" content="Add Hardware Security to Your PCNP Experience" />
     <link rel="apple-touch-icon" href="theme-assets/images/ico/apple-icon-120.png">
@@ -13,30 +13,30 @@
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700" rel="stylesheet">
     <!--Font icons-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
     <!-- BEGIN VENDOR CSS-->
     <link rel="stylesheet" type="text/css" href="theme-assets/css/bootstrap2.min.css">
-    <link rel="stylesheet" type="text/css" href="theme-assets/fonts/themify/style.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="theme-assets/fonts/themify/style.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/fonts/flag-icon-css/css/flag-icon.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/animate/animate.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/flipclock/flipclock.css">
-    <link rel="stylesheet" type="text/css" href="theme-assets/vendors/swiper/css/swiper.min.css">
+    <link rel="stylesheet" type="text/css" href="theme-assets/vendors/swiper/css/swiper.min.css"> -->
     <link rel="stylesheet" href="./theme-assets/css/main.css">
-    <link rel="stylesheet" href="our.css">
+    <!-- <link rel="stylesheet" href="our.css"> -->
     <!-- END VENDOR CSS-->
     <!-- END CRYPTO CSS-->
     <!-- BEGIN Page Level CSS-->
     <link rel="stylesheet" type="text/css" href="theme-assets/css/PCN-3d-animation2.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/monokai-sublime.min.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600|IBM+Plex+Sans:400,500,700" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> -->
     <!-- END Page Level CSS-->
     <!-- BEGIN Custom CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- END Custom CSS-->
     <!-- <link rel="stylesheet" href="pri-mess.css">  -->
-    <link rel="stylesheet" href="./theme-assets/css/keygard.css">
-    <link rel="manifest" href="/theme-assets/manifest.json">
+    <!-- <link rel="stylesheet" href="./theme-assets/css/keygard.css"> -->
+    <!-- <link rel="manifest" href="/theme-assets/manifest.json"> -->
     <meta name="msapplication-TileColor" content="#4360DF">
     <meta name="msapplication-TileImage" content="/theme-assets/images/ms-icon-144x144.png"> 
     <meta property="og:image" content="https://PCNP.io/img/favicon.png" />
@@ -55,13 +55,13 @@
     <meta property="og:title" content="PCNP - private Communication Network Protocol" />
     <meta property="og:description" content="PCNP brings the power of Ethereum into your pocket by combining a messenger, crypto-wallet, and Web3 browser." />
     <meta property="og:url" content="https://PCNP.io/index.html"/>
-    <link rel="stylesheet" href="theme-assets/css/keygard.css">
+    <!-- <link rel="stylesheet" href="theme-assets/css/keygard.css"> -->
 
     <!-- aqedam -->
      <!-- Styles'n'Scripts -->
-     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/monokai-sublime.min.css">
+     <!--   -->
      <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600|IBM+Plex+Sans:400,500,700" rel="stylesheet">
-     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+     <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> -->
 
 </head>
 
@@ -582,6 +582,13 @@
     <!-- BEGIN PAGE LEVEL JS-->
     <script src="theme-assets/js/scripts/particles-type1.js"></script>
 
-    <!-- END PAGE LEVEL JS-->5
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sticky-kit/1.1.3/sticky-kit.min.js"></script>
+    
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.6/dist/scrollreveal.min.js"></script>
+    <script type="text/javascript" src="./js/main.min.js"></script>
+
+    <!-- END PAGE LEVEL JS-->
 </body>
 </html>
