--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- BEGIN VENDOR CSS-->
     <link rel="stylesheet" type="text/css" href="theme-assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/fonts/themify/style.min.css">
-    <link rel="stylesheet" type="text/css" href="theme-assets/fonts/flag-icon-css/css/flag-icon.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="theme-assets/fonts/flag-icon-css/css/flag-icon.min.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="theme-assets/vendors/animate/animate.min.css"> -->
     <link rel="stylesheet" type="text/css" href="theme-assets/css/animate.css">
     <link rel="stylesheet" type="text/css" href="theme-assets/vendors/flipclock/flipclock.css">
@@ -25,15 +25,15 @@
     <link rel="stylesheet" href="our.css">
     <link rel="stylesheet" href="./theme-assets/css/main2.css">
     <link rel="stylesheet" href="./theme-assets/css/token.css">
-    <link rel='stylesheet' id='wpos-slick-style-css'  href='./theme-assets/css/slick370e.css?ver=1.4.3' type='text/css' media='all' />
-    <link rel='stylesheet' id='wpsisac-pro-public-style-css'  href='./theme-assets/css/wpsisac-pro-public.minfeec.css?ver=1.6.5' type='text/css' media='all' />
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-    <script type='text/javascript' src='../wp-includes/js/jquery/jquery.minaf6c.js?ver=3.6.0' id='jquery-core-js'></script>
+    <!-- <link rel='stylesheet' id='wpos-slick-style-css'  href='./theme-assets/css/slick370e.css?ver=1.4.3' type='text/css' media='all' /> -->
+    <!-- <link rel='stylesheet' id='wpsisac-pro-public-style-css'  href='./theme-assets/css/wpsisac-pro-public.minfeec.css?ver=1.6.5' type='text/css' media='all' /> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script> -->
+    <!-- <script type='text/javascript' src='../wp-includes/js/jquery/jquery.minaf6c.js?ver=3.6.0' id='jquery-core-js'></script> -->
 
     <link rel='stylesheet' id='wpsisac-public-style-css'  href='./theme-assets/css/slick-slider-style459e.css?ver=3.0.4' type='text/css' media='all' />
 
 <link rel='stylesheet' id='pcdfwoo_style-css'  href='./theme-assets/css/slick9e1e.css?ver=1.3.2' type='text/css' media='all' />
-<script type='text/javascript' src='../../wp-includes/js/jquery/jquery.minaf6c.js?ver=3.6.0' id='jquery-core-js'></script>
+<!-- <script type='text/javascript' src='../../wp-includes/js/jquery/jquery.minaf6c.js?ver=3.6.0' id='jquery-core-js'></script> -->
 
 <link rel="stylesheet" href="./theme-assets/css/">
     <!-- END VENDOR CSS-->
@@ -1346,21 +1346,22 @@
     <!-- BEGIN PAGE LEVEL JS-->
     <script src="theme-assets/js/scripts/particles-type1.js"></script>
     <!-- END PAGE LEVEL JS-->
-
+//aqedan
     <script type='text/javascript' src='./js/slick.min37f8.js?ver=1.5.3.1' id='wpos-slick-jquery-js'></script>
     <script type='text/javascript' id='wpsisac-public-script-js-extra'>
             var Wpsisac = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};</script>
 <script type='text/javascript' src='./js/wpsisac-public459e.js?ver=3.0.4' id='wpsisac-public-script-js'></script>
+//aqamde
 
-<script type='text/javascript' src='./js/slick.min370e.js?ver=1.4.3' id='wpos-slick-jquery-js'></script>
+<!-- <script type='text/javascript' src='./js/slick.min370e.js?ver=1.4.3' id='wpos-slick-jquery-js'></script>
 
 <script type='text/javascript' id='wpsisac-pro-public-script-js-extra'>
 /* <![CDATA[ */
 var Wpsisac_Pro = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};
 /* ]]> */
-</script>
+</script> -->
 
-<script type='text/javascript' src='./js/wpsisac-pro-public.minfeec.js?ver=1.6.5' id='wpsisac-pro-public-script-js'></script>
+<!-- <script type='text/javascript' src='./js/wpsisac-pro-public.minfeec.js?ver=1.6.5' id='wpsisac-pro-public-script-js'></script> -->
    
   </body>
 </html>
