--- a/app/public/index.html
+++ b/app/public/index.html
@@ -21,7 +21,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.7/flipclock.css" integrity="sha512-UWqafCfAKZVD24WgqPnyBy7BM3hZ5UWRDZt7tE36saC7zu1wLUDNoafWVBhzUzP9wVQLhebfmJcnXVjkern/fQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-  
+    <!-- <link rel='stylesheet' id='wpsisac-public-style-css'  href='../../theme-assets/css/slick-slider-style459e.css?ver=3.0.4' type='text/css' media='all' />
+    <link rel='stylesheet' id='pcdfwoo_style-css'  href='../../theme-assets/css/slick9e1e.css?ver=1.3.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='wpsisac-pro-public-style-css'  href='../../theme-assets/css/wpsisac-pro-public.minfeec.css?ver=1.6.5' type='text/css' media='all' />
+    <link rel='stylesheet' id='wpos-slick-style-css'  href='../../theme-assets/css/slick370e.css?ver=1.4.3' type='text/css' media='all' /> -->
+
+    <!-- <link rel="stylesheet" href="../src/css/main.css"> -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -55,10 +60,7 @@
 <script src="particles/particles.js"></script>
 <script src="particles/config.js"></script>
 <script src="waypoints/waypoints.js"></script>
-<script src="slick/slick.js" id='wpos-slick-jquery-js'></script>
-<script type='text/javascript' id='wpsisac-public-script-js-extra'>
-  var Wpsisac = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};</script>
-<script src="slick/slick2.js" id='wpsisac-public-script-js'></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sticky-kit/1.1.3/sticky-kit.min.js"></script>
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
@@ -78,5 +80,22 @@
       particlesJS('particles-js2', config);
   });
 </script>
+<!-- <script src="slick/slick.js" id='wpos-slick-jquery-js'></script>
+<script type='text/javascript' id='wpsisac-public-script-js-extra'>
+  var Wpsisac = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};</script>
+<script src="../src/js/slick.js" id='wpsisac-public-script-js'></script> -->
+<!-- <script src="../../theme-assets/vendors/vendors.min.js"></script>
+<script type='text/javascript' src='../../js/slick.min37f8.js?ver=1.5.3.1' id='wpos-slick-jquery-js'></script>
+    <script type='text/javascript' id='wpsisac-public-script-js-extra'>
+            var Wpsisac = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};</script>
+<script type='text/javascript' src='../../js/wpsisac-public459e.js?ver=3.0.4' id='wpsisac-public-script-js'></script>
+
+<script type='text/javascript' src='../../js/slick.min370e.js?ver=1.4.3' id='wpos-slick-jquery-js'></script>
+<script type='text/javascript' id='wpsisac-pro-public-script-js-extra'>
+  /* <![CDATA[ */
+  var Wpsisac_Pro = {"is_mobile":"0","is_rtl":"0","is_avada":"0"};
+  /* ]]> */
+  </script> 
+   <script type='text/javascript' src='../../js/wpsisac-pro-public.minfeec.js?ver=1.6.5' id='wpsisac-pro-public-script-js'></script>  -->
 </body>
 </html>
