--- a/app/public/index.html
+++ b/app/public/index.html
@@ -20,7 +20,9 @@
     <link rel="stylesheet" href="../src/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.7/flipclock.css" integrity="sha512-UWqafCfAKZVD24WgqPnyBy7BM3hZ5UWRDZt7tE36saC7zu1wLUDNoafWVBhzUzP9wVQLhebfmJcnXVjkern/fQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/> -->
+    <!-- <link rel="stylesheet" href="../public/vendors/css/swiper.css"> -->
+    <link rel="stylesheet" href="../public/vendors/css/swiper2.css">
     <!-- <link rel='stylesheet' id='wpsisac-public-style-css'  href='../../theme-assets/css/slick-slider-style459e.css?ver=3.0.4' type='text/css' media='all' />
     <link rel='stylesheet' id='pcdfwoo_style-css'  href='../../theme-assets/css/slick9e1e.css?ver=1.3.2' type='text/css' media='all' />
     <link rel='stylesheet' id='wpsisac-pro-public-style-css'  href='../../theme-assets/css/wpsisac-pro-public.minfeec.css?ver=1.6.5' type='text/css' media='all' />
@@ -61,6 +63,7 @@
 <script src="particles/config.js"></script>
 <script src="waypoints/waypoints.js"></script>
 
+<script src="./vendors/swiper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sticky-kit/1.1.3/sticky-kit.min.js"></script>
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
