--- a/app/public/index.html
+++ b/app/public/index.html
@@ -69,6 +69,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"></script>
 <script src="https://unpkg.com/scrollreveal@4.0.6/dist/scrollreveal.min.js"></script>
 <script src="main/main.js"></script>
+<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600|IBM+Plex+Sans:400,500,700" rel="stylesheet">
 
 
 
